corpus/test
================================================================================
Declarations
================================================================================

module foo;

export {
	global i = 42;
}

global j = 42;
option option_ = T;
const const_ = F;

type X: record { };
redef record X += {
	x: count &optional;
};

type E: enum { eA, eB };
redef enum E += { eC };

function foo()
	{
	local x = 1;
	}

--------------------------------------------------------------------------------

(source_file
  (module_decl
    (id))
  (export_decl
    (global_decl
      (id)
      (initializer
        (init_class)
        (expr
          (constant
            (integer))))))
  (global_decl
    (id)
    (initializer
      (init_class)
      (expr
        (constant
          (integer)))))
  (option_decl
    (id)
    (initializer
      (init_class)
      (expr
        (constant))))
  (const_decl
    (id)
    (initializer
      (init_class)
      (expr
        (constant))))
  (type_decl
    (id)
    (type))
  (redef_record_decl
    (id)
    (type_spec
      (id)
      (type)
      (attr_list
        (attr))))
  (type_decl
    (id)
    (type
      (enum_body
        (enum_body_elem
          (id))
        (enum_body_elem
          (id)))))
  (redef_enum_decl
    (id)
    (enum_body
      (enum_body_elem
        (id))))
  (func_decl
    (func_hdr
      (func
        (id)
        (func_params)))
    (func_body
      (stmt_list
        (id)
        (initializer
          (init_class)
          (expr
            (constant
              (integer))))))))
