test/corpus/expressions
================================================================================
Function call
================================================================================

1;
f(1);
f(1) + f(1);

--------------------------------------------------------------------------------

(source_file
  (nl)
  (stmt
    (expr
      (constant
        (integer))))
  (nl)
  (stmt
    (expr
      (id)
      (expr_list
        (expr
          (constant
            (integer))))))
  (nl)
  (stmt
    (expr
      (expr
        (id)
        (expr_list
          (expr
            (constant
              (integer)))))
      (expr
        (id)
        (expr_list
          (expr
            (constant
              (integer)))))))
  (nl))

================================================================================
IDs
================================================================================

a;
a01231;
a::b;
::a;
GLOBAL::a; # Legacy syntax.
Cluster::Supervisor::__init_cluster_nodes();
--------------------------------------------------------------------------------

(source_file
  (nl)
  (stmt
    (expr
      (id)))
  (nl)
  (stmt
    (expr
      (id)))
  (nl)
  (stmt
    (expr
      (id)))
  (nl)
  (stmt
    (expr
      (id)))
  (nl)
  (stmt
    (expr
      (id)))
  (minor_comment)
  (nl)
  (stmt
    (expr
      (id))))

================================================================================
Attributes
================================================================================

global ip: set[addr] = { 1.1.1.1, 1.1.1.2 } &ordered &redef;
---

(source_file
  (nl)
  (decl
    (global_decl
      (id)
      (type
        (type))
      (initializer
        (init_class)
        (expr
          (expr_list
            (expr
              (constant
                (ipv4)))
            (expr
              (constant
                (ipv4))))))
      (attr_list
        (attr)
        (attr)))))

================================================================================
Type constants
================================================================================

print string;
print vector of int;
print interval;
print table[int] of vector of table[string] of count;
---

(source_file
  (nl)
  (stmt
    (expr_list
      (expr
        (type))))
  (nl)
  (stmt
    (expr_list
      (expr
        (type
          (type)))))
  (nl)
  (stmt
    (expr_list
      (expr
        (type))))
  (nl)
  (stmt
    (expr_list
      (expr
        (type
          (type)
          (type
            (type
              (type)
              (type))))))))

================================================================================
Patterns
================================================================================

/abc/;
/abc/s;
/abc/si;
/abc/is;
---

(source_file
  (nl)
  (stmt
    (expr
      (pattern)))
  (nl)
  (stmt
    (expr
      (pattern)))
  (nl)
  (stmt
    (expr
      (pattern)))
  (nl)
  (stmt
    (expr
      (pattern))))

================================================================================
Operations
================================================================================

total_secs / 3600 / 24;
---

(source_file
  (nl)
  (stmt
    (expr
      (expr
        (expr
          (id))
        (expr
          (constant
            (integer))))
      (expr
        (constant
          (integer))))))

================================================================================
Record field
================================================================================

c$http$method || c$http$uri;
c$http?$method || c$http?$uri;
---

(source_file
  (nl)
  (stmt
    (expr
      (expr
        (expr
          (expr
            (id))
          (id))
        (id))
      (expr
        (expr
          (expr
            (id))
          (id))
        (id))))
  (nl)
  (stmt
    (expr
      (expr
        (expr
          (expr
            (id))
          (id))
        (id))
      (expr
        (expr
          (expr
            (id))
          (id))
        (id)))))
