test/corpus/preproc
================================================================================
Pragma
================================================================================

event run_sync_hook() {
        hook Telemetry::sync();
@pragma push ignore-deprecations
        schedule sync_interval { run_sync_hook() };
@pragma pop ignore-deprecations
}

--------------------------------------------------------------------------------

(source_file
  (nl)
  (decl
    (func_decl
      (func_hdr
        (event
          (id)
          (func_params)))
      (func_body
        (nl)
        (stmt_list
          (stmt
            (expr
              (expr
                (id))))
          (nl)
          (stmt
            (preproc_directive
              (pragma)))
          (nl)
          (stmt
            (expr
              (expr
                (id))
              (event_hdr
                (id))))
          (nl)
          (stmt
            (preproc_directive
              (pragma))))
        (nl))))
  (nl))

================================================================================
Pragma pop no argument
================================================================================

event run_sync_hook() {
        hook Telemetry::sync();
@pragma push ignore-deprecations
        schedule sync_interval { run_sync_hook() };
@pragma pop
}

--------------------------------------------------------------------------------

(source_file
  (nl)
  (decl
    (func_decl
      (func_hdr
        (event
          (id)
          (func_params)))
      (func_body
        (nl)
        (stmt_list
          (stmt
            (expr
              (expr
                (id))))
          (nl)
          (stmt
            (preproc_directive
              (pragma)))
          (nl)
          (stmt
            (expr
              (expr
                (id))
              (event_hdr
                (id))))
          (nl)
          (stmt
            (preproc_directive
              (pragma))))
        (nl))))
  (nl))

================================================================================
Deprecated
================================================================================

@deprecated "Quoted like a good user"
@deprecated no quotes here!
@deprecated this one ends in a semicolon, haha;

--------------------------------------------------------------------------------

(source_file
  (nl)
  (decl
    (preproc_directive))
  (nl)
  (decl
    (preproc_directive))
  (nl)
  (decl
    (preproc_directive))
  (nl))
