test/corpus/statements
================================================================================
Assert
================================================================================

assert 1 == 2, "One is not two";
assert 1 == 1;

--------------------------------------------------------------------------------

(source_file
  (nl)
  (stmt
    (expr
      (expr
        (constant
          (integer)))
      (expr
        (constant
          (integer))))
    (assert_msg
      (expr
        (constant
          (string)))))
  (nl)
  (stmt
    (expr
      (expr
        (constant
          (integer)))
      (expr
        (constant
          (integer)))))
  (nl))

================================================================================
Redef record
================================================================================

redef record Foo += { foo: Info &optional; };
redef record Conn::Info$ip_proto -= { &log };
redef record Conn::Info$ip_proto += { &log };

--------------------------------------------------------------------------------

(source_file
  (nl)
  (decl
    (redef_record_decl
      (id)
      (type_spec
        (id)
        (type
          (id))
        (attr_list
          (attr)))))
  (nl)
  (decl
    (redef_record_decl
      (expr
        (expr
          (id))
        (id))
      (attr_list
        (attr))))
  (nl)
  (decl
    (redef_record_decl
      (expr
        (expr
          (id))
        (id))
      (attr_list
        (attr))))
  (nl))

================================================================================
Publish on change
================================================================================

global endpoints: set[addr, addr] &publish_on_change=[$one="hi", $two="there"];

---

(source_file
  (nl)
  (decl
    (global_decl
      (id)
      (type
        (type)
        (type))
      (attr_list
        (attr
          (expr
            (expr_list
              (expr
                (id)
                (expr
                  (constant
                    (string))))
              (expr
                (id)
                (expr
                  (constant
                    (string))))))))))
  (nl))
