test/corpus/types
================================================================================
Address
================================================================================

127.0.0.1;
[::127.0.0.1];

[2620:83:8000:140::3];
[2001:db8:3333:4444:5555:6666:1.2.3.4];
[::1234:5678:1.2.3.4];
[2001:db8::123.123.123.123];
[2001:db8::1234:5678:5.6.7.8];
--------------------------------------------------------------------------------

(source_file
  (nl)
  (stmt
    (expr
      (constant
        (ipv4))))
  (nl)
  (stmt
    (expr
      (constant
        (ipv6))))
  (nl)
  (nl)
  (stmt
    (expr
      (constant
        (ipv6))))
  (nl)
  (stmt
    (expr
      (constant
        (ipv6))))
  (nl)
  (stmt
    (expr
      (constant
        (ipv6))))
  (nl)
  (stmt
    (expr
      (constant
        (ipv6))))
  (nl)
  (stmt
    (expr
      (constant
        (ipv6)))))

================================================================================
Enum with deprecated
================================================================================

type enum_with_deprecated: enum {
    ZERO = 0,
    ONE = 1 &deprecated,
    TWO = 2 &deprecated="two is deprecated :(",
    THREE = 3,
};
--------------------------------------------------------------------------------

(source_file
  (nl)
  (decl
    (type_decl
      (id)
      (type
        (nl)
        (enum_body
          (enum_body_elem
            (id)
            (constant
              (integer)))
          (nl)
          (enum_body_elem
            (id)
            (constant
              (integer))
            (attr))
          (nl)
          (enum_body_elem
            (id)
            (constant
              (integer))
            (attr
              (string)))
          (nl)
          (enum_body_elem
            (id)
            (constant
              (integer))))
        (nl)))))
